Bug 440266 - Nothing happens when I click on several buttons of "Session Chooser" dialog
Summary: Nothing happens when I click on several buttons of "Session Chooser" dialog
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: sessions (other bugs)
Version First Reported In: 24.01.75
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-07-25 15:21 UTC by Patrick Silva
Modified: 2023-11-17 08:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-07-25 15:21:49 UTC
STEPS TO REPRODUCE
1. make sure "Manually choose a session" option is selected in "Session" section of Kate settings
2. open Kate ("Session Chooser" dialog shows up)
3. click on any of the following buttons:
Open...
Open as Template
Duplicate...
Rename...
Delete

OBSERVED RESULT
nothing happens

EXPECTED RESULT
buttons should be functional or greyed out

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.22.80
KDE Frameworks Version: 5.85.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 1 Christoph Cullmann 2022-01-29 20:18:34 UTC
Hi, this works for me with 21.12.1.

Could you try it with a recent version?
I think there was some regression in the past (and even some crash/invalid memory usage) in that dialog.
Comment 2 Patrick Silva 2022-02-03 11:44:40 UTC
This bug persists.
1. click in 'Sessions' menu and choose 'Manage sessions...'
2. click on any of the following buttons:
Open...
Open as Template
Duplicate...
Rename...
Delete

Result: nothing happens.

The buttons work when a session is selected. If the buttons require that a session to be selected, they should remain greyed out until a session is selected.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.24.80
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 3 Waqar Ahmed 2023-11-15 12:52:12 UTC
How do you even get to the state where nothing is selected?
Comment 4 Patrick Silva 2023-11-16 17:28:25 UTC
I just follow the steps from comment 2.
Comment 5 Waqar Ahmed 2023-11-17 08:01:26 UTC
Do you have any sessions listed in the dialog?
Comment 6 Waqar Ahmed 2023-11-17 08:10:29 UTC
Git commit 3a75b4a3914ca75894e41fb56b66ec2edb3839fc by Waqar Ahmed.
Committed on 17/11/2023 at 09:10.
Pushed by waqar into branch 'master'.

sessionmanagerdialog: Disable buttons if there are no sessions

M  +8    -0    apps/lib/session/katesessionmanagedialog.cpp

https://invent.kde.org/utilities/kate/-/commit/3a75b4a3914ca75894e41fb56b66ec2edb3839fc
Comment 7 Waqar Ahmed 2023-11-17 08:12:11 UTC
It helps if all the details are mentioned or you can just do a screen recording when reporting UI bugs as minor differences in settings/state can make the bug disappear.