sessionmanagerdialog: Disable buttons if there are no sessions

BUG: 440266